--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <p>
-    &copy; 2020 
- 
-      Henri Klein
-    
+    &copy; 2020
+
+      Long Do and Henri Klein
+
   </p>
   <p>
   	powered by
