grammar and google seach improvement

--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -3,7 +3,7 @@
 		{% include menu.html %}
 <div id="landing">
   <div class="landing-title">
-    <h1>Hi, I&#39;m
+    <h1>Hey, I&#39;m
       <span class="highlight-title">{{site.username}}</span>,
     </h1>
     <h1>
