--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -27,11 +27,11 @@
 
 				<li><a href="https://henriklein.de">Home (current)</a></li>
 
-				<li><a href="https://school.henriklein.de">school</a></li>
+				<li><a href="https://posts.henriklein.de">posts</a></li>
 
 				<li><a href="https://shop.henriklein.de">My Shop</a></li>
 
-				<li><a href="https://connect.henriklein.de">connect</a></li>
+				<li><a href="https://c0nnect.me">connect</a></li>
 
 
 			</ul>
