--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -1,5 +1,5 @@
 <h1 class="title">{{site.contact_title}}</h1>
-<p class="subtitle" href="https://landing.mailerlite.com/webforms/landing/o4b0n4 ">{{site.contact_description}}</p>
+<p class="subtitle">{{site.contact_description}}</p>
 
 <div class="contact-icons">
   {% if site.email != null %}
