init youtube player

--- a/assets/css/liam.css
+++ b/assets/css/liam.css
@@ -55,8 +55,14 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
-    padding: 0;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 3px;
+    padding-bottom: 0;
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
